final_assessment_output.txt
  File "/Users/imymm/H2Q-Evo/generate_final_assessment.py", line 179
    config = {}
              ^
SyntaxError: f-string: valid expression required before '}'
